// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Single Message with 100% vertical height image correctly 1`] = `
.c6 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c6 {
  font-size: 3rem;
  line-height: normal;
  color: #FFFFFF;
}

.c6 span {
  font-size: inherit;
  line-height: inherit;
}

.c3 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  background: #6F3AAB;
}

.c0 iframe {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: auto;
  z-index: 0;
}

.c5 {
  width: 100%;
  z-index: 1;
  padding: 2rem;
}

.c1 {
  width: 100%;
  height: 280px;
  position: relative;
}

.c2 {
  width: 100%;
  height: 100%;
  z-index: 1;
}

@media (min-width:740px) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c6 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:740px) {
  .c5 {
    min-height: calc(100vh - 5.625rem);
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 4rem;
  }
}

@media (min-width:740px) {
  .c5 {
    width: 50%;
  }
}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c1 {
    height: auto;
    width: 50%;
  }
}

@media (min-width:740px) {
  .c1 {
    padding-bottom: 0;
  }
}

@media (min-width:740px) {
  .c2 img {
    position: absolute;
  }
}

<div
  className="c0"
  id="single-msg__5"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 lazyload"
        height="100%"
        width="100%"
      >
        <img
          alt=""
          className="c4 lazyload"
          data-lowsrc="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=100&h=50&q=100"
          data-sizes="auto"
          data-src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
          height="100%"
          src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          width="100%"
        />
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
    <p
      className="c6"
    >
      “The creativity that goes into helping people have a better life is extraordinary.”
    </p>
  </div>
</div>
`;

exports[`renders Single Message with Image correctly 1`] = `
.c6 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 2rem;
  line-height: 2rem;
}

.c6 {
  font-size: 3rem;
  line-height: normal;
  color: #FFFFFF;
}

.c6 span {
  font-size: inherit;
  line-height: inherit;
}

.c7 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c7 {
  font-size: 1rem;
  line-height: normal;
  color: #FFFFFF;
}

.c7 span {
  font-size: inherit;
  line-height: inherit;
}

.c3 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  min-height: 2.5em;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  cursor: pointer;
  padding: 0.6rem 1rem;
  border-radius: 0.5rem;
  background-color: #FFFFFF;
  color: #000000;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 700;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c8:hover,
.c8:focus,
.c8:focus-within,
.c8:focus-visible {
  background-color: #E1E2E3;
  outline-offset: 3px;
}

.c8:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  background: #6F3AAB;
}

.c0 iframe {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: auto;
  z-index: 0;
}

.c5 {
  width: 100%;
  z-index: 1;
  padding: 2rem;
}

.c1 {
  width: 100%;
  height: 280px;
  position: relative;
}

.c2 {
  width: 100%;
  height: 100%;
  z-index: 1;
}

@media (min-width:740px) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }
}

@media (min-width:1024px) {
  .c6 {
    font-size: 3rem;
    line-height: 3rem;
  }
}

@media (min-width:740px) {
  .c7 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c7 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c8 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c8 {
    width: auto;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: auto;
  }
}

@media (min-width:740px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:740px) {
  .c5 {
    height: auto;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 4rem;
  }
}

@media (min-width:740px) {
  .c5 {
    width: 50%;
  }
}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c1 {
    height: auto;
    width: 50%;
  }
}

@media (min-width:740px) {
  .c1 {
    padding-bottom: 0;
  }
}

@media (min-width:740px) {

}

<div
  className="c0"
  id="single-msg__1"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 lazyload"
        height="100%"
        width="100%"
      >
        <img
          alt=""
          className="c4 lazyload"
          data-lowsrc={null}
          data-sizes="auto"
          data-src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
          height="100%"
          src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          width="100%"
        />
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
    <h1
      className="c6"
    >
      title
    </h1>
    <p
      className="c7"
    >
      description
    </p>
    <a
      className="c8"
      color="white"
      href="/"
      target="_self"
      type="button"
    >
      CTA
    </a>
  </div>
</div>
`;

exports[`renders Single Message with double image correctly 1`] = `
.c6 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c6 {
  font-size: 3rem;
  line-height: normal;
  color: #000000;
}

.c6 span {
  font-size: inherit;
  line-height: inherit;
}

.c3 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  background: #FFE400;
}

.c0 iframe {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: auto;
  z-index: 0;
}

.c5 {
  width: 100%;
  z-index: 1;
  padding: 2rem;
}

.c1 {
  width: 100%;
  height: 280px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  width: 100%;
  height: 100%;
  height: 50%;
  z-index: 1;
}

@media (min-width:740px) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c6 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:740px) {

}

@media (min-width:740px) {
  .c5 {
    height: auto;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 4rem;
  }
}

@media (min-width:740px) {
  .c5 {
    width: 50%;
  }
}

@media (min-width:1024px) {

}

@media (min-width:740px) {

}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c1 {
    height: auto;
    width: 50%;
  }
}

@media (min-width:740px) {
  .c1 {
    padding-bottom: 0;
  }
}

@media (min-width:740px) {

}

@media (min-width:740px) {

}

@media (min-width:740px) {

}

@media (min-width:740px) {

}

<div
  className="c0"
  id="single-msg__6"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 lazyload"
        height="100%"
        width="100%"
      >
        <img
          alt=""
          className="c4 lazyload"
          data-lowsrc="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=100&h=50&q=100"
          data-sizes="auto"
          data-src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
          height="100%"
          src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          width="100%"
        />
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 lazyload"
        height="100%"
        width="100%"
      >
        <img
          alt=""
          className="c4 lazyload"
          data-lowsrc="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=100&h=50&q=100"
          data-sizes="auto"
          data-src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
          height="100%"
          src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          width="100%"
        />
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
    <p
      className="c6"
    >
      “The creativity that goes into helping people have a better life is extraordinary.”
    </p>
  </div>
</div>
`;

exports[`renders Single Message with full width correctly 1`] = `
.c6 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 2rem;
  line-height: 2rem;
}

.c6 {
  font-size: 3rem;
  line-height: normal;
  color: #FFFFFF;
}

.c6 span {
  font-size: inherit;
  line-height: inherit;
}

.c7 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c7 {
  font-size: 1rem;
  line-height: normal;
  color: #FFFFFF;
}

.c7 span {
  font-size: inherit;
  line-height: inherit;
}

.c3 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  min-height: 2.5em;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  cursor: pointer;
  padding: 0.6rem 1rem;
  border-radius: 0.5rem;
  background-color: #FFFFFF;
  color: #000000;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 700;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c8:hover,
.c8:focus,
.c8:focus-within,
.c8:focus-visible {
  background-color: #E1E2E3;
  outline-offset: 3px;
}

.c8:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  background: #6F3AAB;
}

.c0 iframe {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: auto;
  z-index: 0;
}

.c5 {
  width: 100%;
  z-index: 1;
  padding: 2rem;
}

.c1 {
  width: 100%;
  height: 200px;
  position: relative;
}

.c2 {
  width: 100%;
  height: 100%;
  z-index: 1;
}

@media (min-width:740px) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }
}

@media (min-width:1024px) {
  .c6 {
    font-size: 3rem;
    line-height: 3rem;
  }
}

@media (min-width:740px) {
  .c7 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c7 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c8 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c8 {
    width: auto;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: auto;
  }
}

@media (min-width:740px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:740px) {
  .c5 {
    min-height: calc(100vh - 5.625rem);
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 4rem;
  }
}

@media (min-width:740px) {
  .c5 {
    position: absolute;
    width: 100%;
    right: 0;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    width: 50%;
  }
}

@media (min-width:740px) {
  .c5 {
    width: 50%;
  }
}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c1 {
    height: auto;
    width: 100%;
    min-height: 500px;
  }
}

@media (min-width:740px) {
  .c1 {
    padding-bottom: 0;
  }
}

@media (min-width:740px) {
  .c2 img {
    position: absolute;
  }
}

<div
  className="c0"
  id="single-msg__3"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 lazyload"
        height="100%"
        width="100%"
      >
        <img
          alt=""
          className="c4 lazyload"
          data-lowsrc={null}
          data-sizes="auto"
          data-src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
          height="100%"
          src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          width="100%"
        />
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
    <h1
      className="c6"
    >
      title
    </h1>
    <p
      className="c7"
    >
      description
    </p>
    <a
      className="c8"
      color="white"
      href="/"
      target="_self"
      type="button"
    >
      CTA
    </a>
  </div>
</div>
`;

exports[`renders Single Message with full width image and no text correctly 1`] = `
.c3 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  background: #6F3AAB;
}

.c0 iframe {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: auto;
  z-index: 0;
}

.c1 {
  width: 100%;
  height: 200px;
  position: relative;
}

.c2 {
  width: 100%;
  height: 100%;
  z-index: 1;
}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:740px) {

}

@media (min-width:740px) {

}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c1 {
    height: auto;
    width: 100%;
    min-height: 500px;
  }
}

@media (min-width:740px) {
  .c1 {
    padding-bottom: 0;
  }
}

@media (min-width:740px) {
  .c2 img {
    position: absolute;
  }
}

<div
  className="c0"
  id="single-msg__4"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 lazyload"
        height="100%"
        width="100%"
      >
        <img
          alt=""
          className="c4 lazyload"
          data-lowsrc={null}
          data-sizes="auto"
          data-src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
          height="100%"
          src="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg"
          srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          width="100%"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Single Message with no Image correctly 1`] = `
.c2 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c2 {
  font-size: 3rem;
  line-height: normal;
  color: #FFFFFF;
}

.c2 span {
  font-size: inherit;
  line-height: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  background: #6F3AAB;
}

.c0 iframe {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: auto;
  z-index: 0;
}

.c1 {
  width: 100%;
  z-index: 1;
  padding: 2rem;
  margin: auto;
  padding: 1rem;
}

@media (min-width:740px) {
  .c2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:740px) {
  .c1 {
    height: auto;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 4rem;
  }
}

@media (min-width:740px) {
  .c1 {
    width: 100%;
    max-width: 880px;
    padding: 4rem;
  }
}

@media (min-width:1024px) {

}

@media (min-width:740px) {

}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:740px) {

}

@media (min-width:740px) {

}

@media (min-width:740px) {

}

<div
  className="c0"
  id="single-msg__2"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      “The creativity that goes into helping people have a better life is extraordinary.”
    </p>
  </div>
</div>
`;
